@@ -2,12 +2,7 @@
 # See the file LICENSE.txt included with the distribution for
 # software license details.
 
-require 'rubygems'
-begin
-  gem 'ci_reporter'
-rescue
-  $: << File.dirname(__FILE__) + "/../../../lib"
-end
+$: << File.dirname(__FILE__) + "/../../../lib"
 require 'ci/reporter/test_unit'
 
 module Test #:nodoc:all
