@@ -2,6 +2,9 @@
 
 - Call #to_s on the object passed in as the test suite name; compatibility fix for RSpec
   trunk which passes a Spec::DSL::Description instead of a string
+- Fix broken spec due to pending feature introduced in recent RSpec
+- Fix compatibility for JRuby
+- Add stub.rake file as another way to wrap existing Rakefile
 
 == 1.3.3
 
